Fixed popout/popin (it was broken on Safari).  Added a little CSS for the editor.

--- a/trunk/interactive_samples/codemirror/css/csscolors.css
+++ b/trunk/interactive_samples/codemirror/css/csscolors.css
@@ -4,6 +4,8 @@
   font-family: monospace;
   font-size: 10pt;
   color: black;
+/*  background-color: #F0F0F0;*/
+  background-color: #FAFAFA;
 }
 
 pre.code, .editbox {
